--- a/style.css
+++ b/style.css
@@ -1,70 +1,68 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: var(--primary-color);
 }
 
-.main-header {
-    background-color: rgba(0, 0, 0, .3);
-    padding-bottom: 10px;
+a,
+li,
+button {
+  text-decoration: none;
+  color: var(--secondary-color);
 }
 
-.title {
-    text-align: center;
-    margin: 0;
-    font-size: 8em;
-    font-family: "Helvetica";
-    font-weight: normal;
-    color: white;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
 }
 
-#card-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px;
+.logo {
+  cursor: pointer;
+}
+.nav_links {
+  list-style: none;
 }
 
-.card {
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 5px;
+.nav_links li {
+  display: inline-block;
+  padding: 0px 20px;
 }
 
-.card-content {
-    padding: 20px;
-    font-family: "Verdana";
-    color: #777;
+.nav_links li a {
+  transition: all 0.3s ease 0s;
 }
 
-.card-content h2 {
-    margin-top: 0;
-    font-size: 20px;
-}
-
-.card img {
-    width: 100%;
-    height: auto;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, .3);
-    padding: 10px;
+.nav_links li a:hover {
+  color: red;
 }
 
 button {
-    text-align: center;
-    background-color: #666;
-    border: none;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 40px;
-    border-radius: 10px;
-    color: white;
-    font-size: 22px;
-    cursor: pointer;
-    margin: 5px;
+  padding: 9px 25px;
+  background-color: red;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+.logo {
+  width: 100px;
+}
+
+:root {
+  --primary-color: white;
+  --secondary-color: black;
+}
+
+#dark_mode {
+  width: 50px;
+  cursor: pointer;
+}
+
+.dark_theme {
+  --primary-color: grey;
+  --secondary-color: white;
 }
