--- a/style.css
+++ b/style.css
@@ -175,11 +175,15 @@ button {
 
 .pokemon_img_container {
   background-color: var(--secondary-color);
+  width: 6rem;
+  height: 6rem;
 }
 
 .pokemon_img_container img {
-  width: 6rem;
   background-color: var(--secondary-color);
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .pokemon_name_container {
